--- a/devtools/conda-envs/build_env.yaml
+++ b/devtools/conda-envs/build_env.yaml
@@ -2,7 +2,10 @@ channels:
 - uibcdf/label/dev
 - uibcdf
 - conda-forge
-- default
+- defaults
 dependencies:
+- python
+- setuptools
+- numpy
 - anaconda-client
 - conda-build
