--- a/devtools/conda-envs/development_env.yaml
+++ b/devtools/conda-envs/development_env.yaml
@@ -2,12 +2,23 @@ channels:
 - uibcdf/label/dev
 - uibcdf
 - conda-forge
-- default
+- defaults
 dependencies:
 - python
+- setuptools
 - numpy
+- pyunitwizard
 - openmm
 - sympy
 - openopenmmreporters
+- pytest
+- pip
+- pytest-cov
+- codecov
+- sphinx
+- sphinx_rtd_theme
+- sphinxcontrib-bibtex
+- myst-nb
 - jupyterlab
 - pyyaml
+- matplotlib
