--- a/devtools/conda-envs/docs_env.yaml
+++ b/devtools/conda-envs/docs_env.yaml
@@ -2,18 +2,16 @@ channels:
 - uibcdf/label/dev
 - uibcdf
 - conda-forge
-- default
+- defaults
 dependencies:
 - python
+- setuptools
 - numpy
+- pyunitwizard
 - openmm
 - sympy
 - openopenmmreporters
 - sphinx
 - sphinx_rtd_theme
 - sphinxcontrib-bibtex
-- nbsphinx
-- recommonmark
-- sphinx-markdown-tables
-- jupyterlab
-- pyyaml
+- myst-nb
