--- a/devtools/requirements.yaml
+++ b/devtools/requirements.yaml
@@ -1,86 +1,60 @@
-production:
-  channels:
-    - uibcdf/label/dev
-    - uibcdf
-    - conda-forge
-    - default
-  dependencies:
+setup:
+  channels: &setup_channels
+    - defaults
+  dependencies: &setup_dependencies
     - python
+    - setuptools
     - numpy
-    - openmm
-    - sympy
-    - openopenmmreporters
 
-development:
-  channels:
+production:
+  channels: &production_channels
     - uibcdf/label/dev
     - uibcdf
     - conda-forge
-    - default
-  dependencies:
-    - python
-    - numpy
+    - *setup_channels
+  dependencies: &production_dependencies
+    - *setup_dependencies
+    - pyunitwizard
     - openmm
     - sympy
     - openopenmmreporters
-    - jupyterlab
-    - pyyaml
-    - matplotlib
 
 test:
-  channels:
-    - uibcdf/label/dev
-    - uibcdf
-    - conda-forge
-    - default
-  dependencies:
-    - python
-    - numpy
-    - openmm
-    - openopenmmreporters
-    - sympy
+  channels: &test_channels
+    - *production_channels
+  dependencies: &test_dependencies
+    - *production_dependencies
     - pytest
     - pip
     - pytest-cov
     - codecov
 
 docs:
-  channels:
-    - uibcdf/label/dev
-    - uibcdf
-    - conda-forge
-    - default
-  dependencies:
-    - python
-    - numpy
-    - openmm
-    - sympy
-    - openopenmmreporters
+  channels: &docs_channels
+    - *production_channels
+  dependencies: &docs_dependencies
+    - *production_dependencies
     - sphinx
     - sphinx_rtd_theme
     - sphinxcontrib-bibtex
-    - nbsphinx
-    - recommonmark
-    - sphinx-markdown-tables
+    - myst-nb
+
+development:
+  channels:
+    - *production_channels
+  dependencies:
+    - *production_dependencies
+    - *test_dependencies
+    - *docs_dependencies
     - jupyterlab
     - pyyaml
-
-setup:
-  channels:
-    - default
-  dependencies:
-    - python
-    - setuptools
-    - numpy
-    - versioneer
+    - matplotlib
 
 conda-build:
   channels:
-    - uibcdf/label/dev
-    - uibcdf
-    - conda-forge
-    - default
+    - *production_channels
   dependencies:
+    - *setup_dependencies
     - anaconda-client
     - conda-build
 
