--- a/devtools/requirements.yaml
+++ b/devtools/requirements.yaml
@@ -15,6 +15,7 @@ production:
   dependencies: &production_dependencies
     - *setup_dependencies
     - pyunitwizard
+    - pint
     - openmm
     - sympy
     - openopenmmreporters
