--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         os: [macOS-latest, ubuntu-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v1
@@ -61,7 +61,7 @@ jobs:
       shell: bash -l {0}
 
       run: |
-        pytest -v --cov=openmolecularsystems --cov-report=xml --color=yes openmolecularsystems/tests/
+        pytest -v --cov=uibcdf_systems --cov-report=xml --color=yes uibcdf_systems/tests/
 
     - name: CodeCov
       uses: codecov/codecov-action@v1
