--- a/devtools/conda-build/meta.yaml
+++ b/devtools/conda-build/meta.yaml
@@ -1,5 +1,5 @@
 package:
-  name: openmolecularsystems
+  name: uibcdf_systems
   version: "{{ environ['GIT_DESCRIBE_TAG'] }}"
 source:
   path: ../../
@@ -18,7 +18,7 @@ requirements:
   - pint
   - openmm
   - sympy
-  - openopenmmreporters
+  - uibcdf_reporters
 about:
   home: https://uibcdf.org
   license: MIT License
@@ -27,5 +27,5 @@ about:
     in the UIBCDF lab.
 
     '
-  dev_url: https://github.com/uibcdf/OpenMolecularSystems
-  doc_url: https://uibcdf.org/OpenMolecularSystems
+  dev_url: https://github.com/uibcdf/Molecular-Systems
+  doc_url: https://uibcdf.org/Molecular-Systems
