--- a/devtools/conda-envs/docs_env.yaml
+++ b/devtools/conda-envs/docs_env.yaml
@@ -11,7 +11,7 @@ dependencies:
 - pint
 - openmm
 - sympy
-- openopenmmreporters
+- uibcdf_reporters
 - sphinx
 - sphinx_rtd_theme
 - sphinxcontrib-bibtex
